--- a/package.json
+++ b/package.json
@@ -1,15 +1,19 @@
 {
-  "name": "junction-bot",
+  "name": "botbuilder-sample-speech-to-text",
   "version": "1.0.0",
-  "description": "",
-  "main": "app.js",
+  "description": "Bot Builder Sample - Speech To Text",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node app.js"
   },
-  "author": "sepp",
-  "license": "ISC",
+  "author": "",
+  "license": "MIT",
   "dependencies": {
-    "botbuilder": "^3.4.4",
-    "restify": "^4.3.0"
+    "botbuilder": "^3.2.3",
+    "dotenv-extended": "^1.0.3",
+    "needle": "^1.1.2",
+    "node-uuid": "^1.4.7",
+    "request": "^2.75.0",
+    "restify": "^4.1.1",
+    "url": "^0.11.0"
   }
 }
