added gitlab nodejs to deps

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "botbuilder": "^3.4.4",
-    "restify": "^4.3.0"
+    "restify": "^4.3.0",
+    "node-gitlab":"^1.4.0"
   }
 }
